--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/ssr": "^0.6.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0"
@@ -17,8 +18,8 @@
     "@types/node": "^22.14.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "@vitejs/plugin-react": "^4.6.0",
     "typescript": "~5.7.2",
-    "vite": "^6.2.0",
-    "@vitejs/plugin-react": "^4.6.0"
+    "vite": "^6.2.0"
   }
 }
